Changelog
=========

1.0a2 (unreleased)
------------------

- Show error message when a job can not be pulled from the server.
  [timo]


1.0-alpha1 (2012/02/26)
-------------------

- forked from collective.recipe.hudsonjob
  [tisto, iElectric]