@@ -2,14 +2,17 @@
 develop = .
 parts =
     test
-    jenkins
+    eggs
     scripts
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = collective.recipe.jenkinsjob [tests]
 
+[eggs]
+recipe = zc.recipe.egg
+eggs = zc.buildout
+
 [scripts]
 recipe = zc.recipe.egg:scripts
-eggs =
-    jarn.mkrelease
+eggs = jarn.mkrelease
